--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,28 @@
-<h1>New Photo</h1>
-
-<%= render 'form', photo: @photo %>
-
-<%= link_to 'Back', photos_path %>
+<div class="row justify-content-center">
+  <div class="col-sm-6 col-12">
+    <div class="card my-2">
+      <div class="card-body">
+        <h5 class="card-title">New Photo</h2>
+        <%= form_with(model: @photo) do |form| %>
+          <div class="form-group">
+            <%= form.file_field :resource %>
+          </div>
+          <div class="form-group">
+            <%= form.label :title %>
+            <%= form.text_field :title, class: 'form-control', placeholder: 'Enter title.' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :caption %>
+            <%= form.text_field :caption, class: 'form-control', placeholder: 'Enter caption.' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :hidden %>
+            <%= form.check_box :hidden %>
+          </div>
+          <p class="invalid-feedback" id="notice"><%= notice %></p>
+          <%= form.submit 'Create Photo', class: 'btn btn-primary w-100' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
