--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,36 @@
-<h1>Editing User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<div class="row justify-content-center">
+  <div class="col-sm-6 col-12">
+    <div class="card my-2">
+      <%= image_tag @user.avatar_url, class: 'card-image-top', height: 256 %>
+      <div class="card-body">
+        <%= form_with(model: @user, html: { multipart: true }) do |form| %>
+          <div class="form-group">
+            <%= form.label :avatar %>
+            <%= form.file_field :avatar %>
+          </div>
+          <div class="form-group">
+            <%= form.label :email, 'E-mail address' %>
+            <%= form.text_field :email, class: 'form-control', placeholder: 'Enter e-mail address.' %>
+            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <%= form.label :name %>
+            <%= form.text_field :name, class: 'form-control', placeholder: 'Enter name.' %>
+          </div>
+          <div class="form-row">
+            <div class="col form-group">
+              <%= form.label :password %>
+              <%= form.password_field :password, class: 'form-control', placeholder: 'Enter password.' %>
+            </div>
+            <div class="col form-group">
+              <%= form.label :password_confirmation %>
+              <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm password.' %>
+            </div>
+          </div>
+          <div class="invalid-feedback" id="notice"><%= notice %></div>
+          <%= form.submit 'Sign Up', class: 'btn btn-primary w-100' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
