--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,41 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
-
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div class="row">
+  <div class="col-sm-7 col-12 order-sm-1 order-2">
+    <div class="row justify-content-center">
+      <% @user.photos.paginate(page: params[:page]).each do |photo| %>
+        <div class="col-3 m-1 p-0">
+          <div class="card">
+            <%= image_tag photo.resource_url, class: 'card-image-top', height: 256 %>
+            <div class="card-body">
+              <h5 class="card-title"><%= photo.title %></h5>
+              <p class="card-text"><%= photo.caption %></p>
+              <%= link_to 'Discuss', photo, class: 'btn btn-primary' %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-sm-5 col-12 order-sm-2 order-1">
+    <div class="card my-1">
+      <%= image_tag @user.avatar_url, class: 'card-image-top', height: 256 %>
+      <div class="card-body">
+        <h5 class="card-title"><%= @user.name %></h5>
+        <div class="row">
+          <% if can? :edit, User, @user %>
+          <div class="col">
+            <%= link_to 'Edit Profile', edit_user_url, class: 'btn btn-primary w-100' %>
+          </div>
+          <% end %>
+          <% if current_user == @user %>
+            <div class="col">
+              <%= link_to 'New Photo', new_photo_url, class: 'btn btn-primary w-100' %>
+            </div>
+            <div class="col">
+              <%= link_to 'New Album', new_album_url, class: 'btn btn-primary w-100' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
