--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,34 @@
-<h1>Editing Photo</h1>
-
-<%= render 'form', photo: @photo %>
-
-<%= link_to 'Show', @photo %> |
-<%= link_to 'Back', photos_path %>
+<div class="row justify-content-center">
+  <div class="col-sm-6 col-12">
+    <div class="card my-2">
+      <div class="card-body">
+        <h5 class="card-title">New Photo</h2>
+        <%= form_with(model: @photo, local: true) do |form| %>
+          <%= form.hidden_field :user_id, value: current_user.id %>
+          <div class="form-group">
+            <%= form.label :title %>
+            <%= form.text_field :title, class: 'form-control', placeholder: 'Enter title.' %>
+          </div>
+          <div class="form-group">
+            <%= form.label :caption %>
+            <%= form.text_field :caption, class: 'form-control', placeholder: 'Enter caption.' %>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <%= form.check_box :hidden, class: 'form-check-input' %>
+              <%= form.label :hidden, 'Hide this image from search?', class: 'form-check-label' %>
+            </div>
+          </div>
+          <div class="form-group">
+            <%= form.label :album_id, 'Album' %>
+            <%= form.select(:album_id, [['None', nil]] + current_user.albums.all.collect { |album| [ album.title, album.id ] }, {}, { class: 'form-control' }) %>
+          </div>
+          <% @photo.errors.full_messages.each do |error| %>
+            <div class="invalid-feedback"><%= error %></div>
+          <% end %>
+          <%= form.submit 'Create Photo', class: 'btn btn-primary w-100' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
