--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,28 +16,26 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <%= link_to 'Home', '/', class: 'nav-link' %>
-          </li>
           <% if logged_in? %>
-          <li class="nav-item active">
-            <%= link_to 'Browse', '/users/browse', class: 'nav-link' %>
-          </li>
           <li class="nav-item">
-            <%= link_to 'Profile', user_path(current_user), class: 'nav-link' %>
+            <%= link_to 'Home', user_path(current_user), class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Logout', '/logout', class: 'nav-link' %>
           </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to 'Home', '/', class: 'nav-link' %>
+          </li>
           <% end %>
         </ul>
         <% unless logged_in? %>
-          <%= link_to 'Sign Up', '/users/new', class: 'btn btn-outline-success' %>
+          <%= link_to 'Sign Up', new_user_path, class: 'btn btn-outline-success' %>
         <% else %>
-          <%= form_for '/photos/search', html: { class: 'form-inline mt-1 mt-md-0' } do |form| %>
-            <%= form.text_field :query, class: 'form-control mr-1', placeholder: 'Search photos.' %>
-            <%= form.submit 'Search', class: 'btn btn-primary' %>
-          <% end %>
+          <form action="<%= photos_path =%>", method="GET" class="form-inline mt-1 mt-md-0">
+            <input type="search" name="query" value="<%= params[:query] %>" placeholder="Search photos." class="form-control mr-1" />
+            <input type="submit" name="commit" value="Search" class="btn btn-primary">
+          </form>
         <% end %>
       </div>
     </nav>
