Comment controllers work.

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -8,7 +8,7 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <%= form_for @comment, html: { class: 'form-inline' } do |form| %>
+          <%= form_for [@photo, @comment], html: { class: 'form-inline' } do |form| %>
             <%= form.hidden_field :user_id, value: current_user.id %>
             <%= form.hidden_field :photo_id, value: @photo.id %>
             <%= form.text_field :body, class: 'form-control mr-1', placeholder: 'Leave a comment.' %>
