--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -14,14 +14,14 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
-          <%= link_to 'Leave a comment.', "#{new_comment_url}?photo_id=#{@photo.id}", class: 'text-primary' %>
+          <%= link_to 'Leave a comment.', "#{new_photo_comment_url(@photo)}", class: 'text-primary' %>
         </li>
         <% @photo.comments.each do |comment| %>
           <li class="list-group-item">
             <label><%= comment.user.name %>:</label>
             <%= comment.body %>
             <% if can? :delete, comment %>
-              <%= link_to 'Delete', comment_url(comment), method: :delete, data: { confirm: 'Are you sure?' }, class: 'float-right text-danger' %>
+              <%= link_to 'Delete', photo_comment_url(@photo, comment), method: :delete, data: { confirm: 'Are you sure?' }, class: 'float-right text-danger' %>
             <% end %>
           </li>
         <% end %>
