--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -7,20 +7,8 @@
         <p class="card-text"><%= @photo.caption %></p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          <%= form_for [@photo, @comment], html: { class: 'form-inline' } do |form| %>
-            <%= form.hidden_field :user_id, value: current_user.id %>
-            <%= form.hidden_field :photo_id, value: @photo.id %>
-            <%= form.text_field :body, class: 'form-control mr-1', placeholder: 'Leave a comment.' %>
-            <%= form.submit 'Post', class: 'btn btn-primary' %>
-          <% end %>
-        </li>
-        <% @photo.comments.each do |comment| %>
-          <li class="list-group-item">
-            <label><%= comment.user.name %>:</label>
-            <%= comment.body %>
-          </li>
-        <% end %>
+        <%= render 'form', photo: @photo, comment: @comment %>
+        <%= render 'comments/thread', comments: @photo.comments, highlight: nil %>
       </ul>
     </div>
   </div>
