--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -3,17 +3,7 @@
     <div class="card my-2">
       <div class="card-body">
         <h5 class="card-title">New Album</h2>
-        <%= form_with(model: @album, local: true) do |form| %>
-          <%= form.hidden_field :user_id, value: current_user.id %>
-          <div class="form-group">
-            <%= form.label :title %>
-            <%= form.text_field :title, class: 'form-control', placeholder: 'Enter title.' %>
-          </div>
-          <% @album.errors.full_messages.each do |error| %>
-            <div class="invalid-feedback"><%= error %></div>
-          <% end %>
-          <%= form.submit 'Create Album', class: 'btn btn-primary w-100' %>
-        <% end %>
+        <%= render 'form', album: @album %>
       </div>
     </div>
   </div>
