--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -5,7 +5,7 @@
       <div class="card-body">
         <h5 class="card-title"><%= @photo.title %></h2>
         <p class="card-text"><%= @photo.caption %></p>
-        <% if can? :delete, @photo %>
+        <% if can? :destroy, @photo %>
           <%= link_to 'Delete', photo_url, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger w-25' %>
         <% end %>
         <% if can? :edit, @photo %>
