--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,18 +14,7 @@
     </div>
   </div>
   <div class="col-sm-5 col-12 order-sm-2 order-1">
-    <div class="card">
-      <div class="card-body text-center">
-        <%= image_tag @user.avatar_url, class: 'rounded-circle my-1', height: 256, width: 256 %>
-        <h4 class="card-title"><%= @user.name %></h4>
-        <% if can? :destroy, @user %>
-          <%= link_to 'Delete', user_url, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger w-25' %>
-        <% end %>
-        <% if can? :edit, @user %>
-          <%= link_to 'Edit', edit_user_url, class: 'btn btn-primary w-25' %>
-        <% end %>
-      </div>
-    </div>
+    <%= render 'profile', user: @user %>
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Albums</h4>
@@ -36,7 +25,7 @@
           </li>
           <% @user.albums.each do |album| %>
             <li class="list-group-item">
-              <%= link_to album.title, album, class: 'card-title text-primary' %>
+              <%= render 'albums/list', album: album %>
             </li>
           <% end %>
         </ul>
