--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,7 +27,9 @@
               <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm password.' %>
             </div>
           </div>
-          <div class="invalid-feedback" id="notice"><%= notice %></div>
+          <% @photo.errors.full_messages.each do |error| %>
+            <div class="invalid-feedback"><%= error %></div>
+          <% end %>
           <%= form.submit 'Sign Up', class: 'btn btn-primary w-100' %>
         <% end %>
       </div>
