--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to PhotoGo, <%= @user.name %></h1>
+<h1>Welcome to PhotoGo, <%= @name %></h1>
 <p>You have successfully signed up for PhotoGo.</p>
 <p>Thanks for joining and have a great day!</p>
