--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: album, local: true) do |form| %>
+<%= form_with(model: [user, album], local: true) do |form| %>
   <%= form.hidden_field :user_id, value: current_user.id %>
   <div class="form-group">
     <%= form.label :title %>
