--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= album.title %></td>
         <td><%= link_to 'Show', album %></td>
-        <td><%= link_to 'Edit', edit_album_path(album) %></td>
+        <td><%= link_to 'Edit', edit_user_album_url(album) %></td>
         <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Album', new_album_path %>
+<%= link_to 'New Album', new_user_album_url(current_user) %>
