--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <ul class="navbar-nav mr-auto">
           <% if logged_in? %>
           <li class="nav-item">
-            <%= link_to 'Home', user_path(current_user), class: 'nav-link' %>
+            <%= link_to 'Home', user_url(current_user), class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Logout', '/logout', class: 'nav-link' %>
@@ -30,12 +30,9 @@
           <% end %>
         </ul>
         <% unless logged_in? %>
-          <%= link_to 'Sign Up', new_user_path, class: 'btn btn-outline-success' %>
+          <%= link_to 'Sign Up', new_user_url, class: 'btn btn-outline-success' %>
         <% else %>
-          <form action="<%= photos_path =%>", method="GET" class="form-inline mt-1 mt-md-0">
-            <input type="search" name="query" value="<%= params[:query] %>" placeholder="Search photos." class="form-control mr-1" />
-            <input type="submit" name="commit" value="Search" class="btn btn-primary">
-          </form>
+          <%= render 'photos/search' %>
         <% end %>
       </div>
     </nav>
