--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -3,34 +3,7 @@
     <div class="card my-2">
       <div class="card-body">
         <h5 class="card-title">New Photo</h2>
-        <%= form_with(model: @photo, local: true) do |form| %>
-          <%= form.hidden_field :user_id, value: current_user.id %>
-          <div class="form-group">
-            <%= form.file_field :resource %>
-          </div>
-          <div class="form-group">
-            <%= form.label :title %>
-            <%= form.text_field :title, class: 'form-control', placeholder: 'Enter title.' %>
-          </div>
-          <div class="form-group">
-            <%= form.label :caption %>
-            <%= form.text_field :caption, class: 'form-control', placeholder: 'Enter caption.' %>
-          </div>
-          <div class="form-group">
-            <div class="form-check">
-              <%= form.check_box :hidden, class: 'form-check-input' %>
-              <%= form.label :hidden, 'Hide this image from search?', class: 'form-check-label' %>
-            </div>
-          </div>
-          <div class="form-group">
-            <%= form.label :album_id, 'Album' %>
-            <%= form.select(:album_id, [['None', nil]] + current_user.albums.all.collect { |album| [ album.title, album.id ] }, {}, { class: 'form-control' }) %>
-          </div>
-          <% @photo.errors.full_messages.each do |error| %>
-            <div class="invalid-feedback"><%= error %></div>
-          <% end %>
-          <%= form.submit 'Create Photo', class: 'btn btn-primary w-100' %>
-        <% end %>
+        <%= render 'form', photo: @photo %>
       </div>
     </div>
   </div>
