--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,37 +1,8 @@
 <div class="row justify-content-center">
   <div class="col-sm-6 col-12">
     <div class="card my-2">
-      <%= image_tag @user.avatar_url, class: 'card-image-top', height: 256 %>
       <div class="card-body">
-        <%= form_with(model: @user, html: { multipart: true }) do |form| %>
-          <div class="form-group">
-            <%= form.label :avatar %>
-            <%= form.file_field :avatar %>
-          </div>
-          <div class="form-group">
-            <%= form.label :email, 'E-mail address' %>
-            <%= form.text_field :email, class: 'form-control', placeholder: 'Enter e-mail address.' %>
-            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div>
-          <div class="form-group">
-            <%= form.label :name %>
-            <%= form.text_field :name, class: 'form-control', placeholder: 'Enter name.' %>
-          </div>
-          <div class="form-row">
-            <div class="col form-group">
-              <%= form.label :password %>
-              <%= form.password_field :password, class: 'form-control', placeholder: 'Enter password.' %>
-            </div>
-            <div class="col form-group">
-              <%= form.label :password_confirmation %>
-              <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm password.' %>
-            </div>
-          </div>
-          <% @photo.errors.full_messages.each do |error| %>
-            <div class="invalid-feedback"><%= error %></div>
-          <% end %>
-          <%= form.submit 'Sign Up', class: 'btn btn-primary w-100' %>
-        <% end %>
+        <%= render 'form', user: @user %>
       </div>
     </div>
   </div>
