--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,1 +1,28 @@
-<%= render 'show', highlight: nil %>
+<div class="row justify-content-center">
+  <div class="col-sm-6 col-12">
+    <div class="card my-2">
+      <%= image_tag @photo.resource_url, class: 'card-image-top', height: 500 %>
+      <div class="card-body">
+        <h5 class="card-title"><%= @photo.title %></h5>
+        <p class="card-text">
+          <%= @photo.caption %>
+        </p>
+        <% if can? :edit, @photo %>
+          <%= link_to 'Edit', edit_photo_url, class: 'btn btn-primary w-25' %>
+        <% end %>
+        <% if can? :destroy, @photo %>
+          <%= link_to 'Delete', photo_url, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger w-25' %>
+        <% end %>
+        <p class="small text-muted mt-1">
+          Posted <%= @photo.created_at.strftime('%A, %B %d, %Y') %>
+        </p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <%= link_to 'Leave a comment.', "#{new_photo_comment_url(@photo)}", class: 'text-primary' %>
+        </li>
+        <%= render 'comments/thread', comments: @photo.comments, highlight: nil %>
+      </ul>
+    </div>
+  </div>
+</div>
