--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,5 @@
-<div class="row my-1">
-  <div class="col-sm-7 col-12 order-sm-1 order-2">
-    <div class="card-columns">
-      <% @users.each do |user| %>
-        <%= render 'profile', user: user %>
-      <% end %>
-    </div>
-  </div>
+<div class="card-columns my-1">
+  <% @users.each do |user| %>
+    <%= render 'profile', user: user %>
+  <% end %>
 </div>
