--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row my-1">
-  <div class="col order-sm-1 order-2">
+  <div class="col order-sm-1 order-3">
     <div class="card-columns">
       <% if current_user.eql? @user %>
         <div class="card card-inverse">
@@ -14,7 +14,7 @@
     </div>
   </div>
   <% if current_user.eql? @user %>
-    <div class="col-sm-3 col-12 order-sm-2 order-1">
+    <div class="col order-2">
       <div class="card">
         <div class="card-body">
           <h4 class="card-title">Albums</h4>
@@ -34,7 +34,7 @@
       </div>
     </div>
   <% end %>
-  <div class="col-sm-3 col-12 order-sm-2 order-1">
+  <div class="col order-sm-2 order-1">
     <%= render 'profile', user: @user %>
   </div>
 </div>
