--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,10 +1,8 @@
 <div class="row">
   <div class="col-sm-7 col-12 order-sm-1 order-2">
     <div class="row justify-content-center">
-      <% [0, 1, 2, 3, 4, 5, 6, 7, 8].shuffle.each do |i| %>
-        <div class="col-3 m-1 p-0">
-          <%= image_tag "/images/#{i}.jpg", class: 'w-100 rounded' %>
-        </div>
+      <% Photo.where(hidden: false).order('RANDOM()').limit(5).each do |photo| %>
+        <%= render 'photos/photo', photo: photo %>
       <% end %>
     </div>
   </div>
