Heroku not accepting assets, checking them in.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <a class="avatar mr-1" href="<%= new_user_album_url(current_user) %>">
-                <%= image_tag '/images/photo.png', height: 50 %>
+                <%= image_tag '/images/photo.png' %>
               </a>
               <%= link_to 'Create a new album', new_user_album_url(current_user), class: 'card-title text-primary' %>
             </li>
