Re-compiled SCSS.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,4 @@
+@import "components.scss";
 @import "bootstrap.scss";
-@import "app.scss";
+@import "bootstrap-extended.scss";
+@import "colors.scss";
