--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -6,6 +6,7 @@
         <h5 class="card-title"><%= @photo.title %></h5>
         <p class="card-text">
           <%= @photo.caption %>
+          <small class="text-muted">by <%= @photo.user.name %></small>
         </p>
         <% if can? :edit, @photo %>
           <%= link_to 'Edit', edit_photo_url, class: 'btn btn-primary w-25' %>
