--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-7 col-12 order-sm-1 order-2">
-    <div class="row justify-content-center">
+    <div class="card-columns">
       <% Photo.where(hidden: false).order('RANDOM()').limit(6).each do |photo| %>
         <%= render 'photos/photo', photo: photo %>
       <% end %>
